# Gamma-Ray

./: .gitignore  README.md  SECURITY.md  gamma_ray.py  polimindlist.py  pyproject.toml  requirements.txt  test_gui.txt
config/: sample_profile.json
examples/: demo_wordlist_fictional.txt
tests/: test_generator.py
